# MC3FBA

fba-1.0/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
fba-1.0/example/: Bounds.txt  Makefile.am  PARAMETERS  Reactions.txt  SubsetReactions.txt  output.txt  scirpt-1.pl  script-2.pl
fba-1.0/glpk/: Makefile.am  Makefile.in
fba-1.0/scripts/: script-1.pl  script-2.pl
fba-1.0/src/: Biomass.cpp  Biomass.h  Makefile.am  Makefile.in  Tokenizer.h  main.cpp  random.cpp  random.h  stoich_mat.cpp  stoich_mat.h
